button text updated

--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@
       <input type="checkbox" value="Math">Math <br>
       <input type="checkbox" value="English">English <br>
       <input type="checkbox" value="Science"> Science <br>
-      <input type="submit" value="save"/>
+      <input type="submit" value="Submit"/>
   </form>
 </body>
 </html>
