--- a/form.html
+++ b/form.html
@@ -14,17 +14,21 @@
  <input type ="radio"name ="gender"="Male" id="Male">
 <label for="Female">Female</label>
 <input type="radio"name="gender"="Female" id="Female"> <br>
-<label for="India">India</India>
+<label for="India">India</label>
  <input type="radio"name="country name"="India" id="India">
  <label for="other">other</label>
-
 <input type="radio"name="country name"="other" id="other">  <br>
 <input type="date"="send" oninput="result.value"="send.value"> <br>
 Address:<textarea name="address" rows="3" cols="50"> </textarea> <br>
 <br>
-<input type="checkbox" value="Math">Math <br>
-<input type="checkbox" value="English">English <br>
-<input type="checkbox" value="Science"> Science <br>
+<label for="Math">Math</label>
+<input type="checkbox" value="Math" id="Math"> <br>
+<label for="English">English</label>
+
+<input type="checkbox" value="English" id="English"> <br>
+<label for="Science">Science</label>
+
+<input type="checkbox" value="Science" id="Science">  <br>
 <input type="submit" value="save"/>
 </form>
 </body>
